Expand Islamic philosophy questions with explanations
Added detailed questions and descriptions related to Islamic philosophy.

--- a/felsefe.html
+++ b/felsefe.html
@@ -1,20 +1,103 @@
-<li>Varlık (vücûd) ile mahiyet arasındaki ilişki İslam filozofları tarafından nasıl açıklanmıştır?</li>
-<li>İslam felsefesinde akıl ile vahiy arasında nasıl bir denge kurulmuştur?</li>
-<li>Farabi’ye göre erdemli toplumun temel özellikleri nelerdir?</li>
-<li>İbn Sina’nın zorunlu varlık anlayışı neyi ifade eder?</li>
-<li>Gazali’nin nedensellik eleştirisinin felsefi sonuçları nelerdir?</li>
-<li>İbn Rüşd’e göre felsefe yapmak dinen meşru mudur, neden?</li>
-<li>İslam felsefesinde bilginin kaynağı nedir?</li>
-<li>Akıl tek başına hakikate ulaşabilir mi?</li>
-<li>İslam düşüncesinde özgür irade nasıl temellendirilmiştir?</li>
-<li>Kader anlayışı insan sorumluluğunu ortadan kaldırır mı?</li>
-<li>Nefs kavramı İslam felsefesinde nasıl tanımlanır?</li>
-<li>İbn Sina’ya göre ruh beden ilişkisi nasıldır?</li>
-<li>İslam filozoflarına göre mutluluk (saadet) nedir?</li>
-<li>Ahlakın kaynağı akıl mı vahiy midir?</li>
-<li>İslam felsefesinde iyi ve kötü nasıl belirlenir?</li>
-<li>Varlık hiyerarşisi anlayışı ne anlama gelir?</li>
-<li>Sudur teorisi evrenin yaratılışını nasıl açıklar?</li>
-<li>İslam filozoflarına göre evren ezeli midir, yaratılmış mıdır?</li>
-<li>Bilgi ile iman arasında nasıl bir ilişki vardır?</li>
-<li>İslam felsefesinde hikmet kavramı neyi ifade eder?</li>
+<ul id="islam-felsefesi-sorulari">
+
+<li data-konu="Varlık Metafiziği" data-ekol="Meşşâîlik">
+  <h2 class="soru-baslik">Varlık (vücûd) ile mahiyet arasındaki ilişki İslam filozofları tarafından nasıl açıklanmıştır?</h2>
+  <p class="kisa-aciklama">Bu soru, varlığın mı yoksa mahiyetin mi ontolojik olarak öncelikli olduğu tartışmasını ele alır.</p>
+</li>
+
+<li data-konu="Bilgi Felsefesi" data-ekol="Meşşâîlik">
+  <h2 class="soru-baslik">İslam felsefesinde akıl ile vahiy arasında nasıl bir denge kurulmuştur?</h2>
+  <p class="kisa-aciklama">Akıl ve vahyin bilgi üretimindeki sınırları ve tamamlayıcılığı tartışılır.</p>
+</li>
+
+<li data-konu="Siyaset Felsefesi" data-ekol="Farabi">
+  <h2 class="soru-baslik">Farabi’ye göre erdemli toplumun temel özellikleri nelerdir?</h2>
+  <p class="kisa-aciklama">Bu soru, ideal toplum düzeninin ahlaki ve yönetsel ilkelerini inceler.</p>
+</li>
+
+<li data-konu="Varlık Metafiziği" data-ekol="İbn Sina">
+  <h2 class="soru-baslik">İbn Sina’nın zorunlu varlık anlayışı neyi ifade eder?</h2>
+  <p class="kisa-aciklama">Zorunlu varlık kavramı, varlığı kendinden olan ilahi varlığı temellendirmek için kullanılır.</p>
+</li>
+
+<li data-konu="Nedensellik" data-ekol="Kelâm / Gazali">
+  <h2 class="soru-baslik">Gazali’nin nedensellik eleştirisinin felsefi sonuçları nelerdir?</h2>
+  <p class="kisa-aciklama">Bu eleştiri, doğa yasalarının zorunluluğunu sorgular ve ilahi kudreti merkeze alır.</p>
+</li>
+
+<li data-konu="Din-Felsefe İlişkisi" data-ekol="İbn Rüşd">
+  <h2 class="soru-baslik">İbn Rüşd’e göre felsefe yapmak dinen meşru mudur, neden?</h2>
+  <p class="kisa-aciklama">Felsefi düşüncenin dini metinlerle ilişkisi ele alınır.</p>
+</li>
+
+<li data-konu="Bilgi Felsefesi" data-ekol="Meşşâîlik">
+  <h2 class="soru-baslik">İslam felsefesinde bilginin kaynağı nedir?</h2>
+  <p class="kisa-aciklama">Bilginin akıl, duyular ve vahiy yoluyla elde edilmesi tartışılır.</p>
+</li>
+
+<li data-konu="Epistemoloji" data-ekol="Genel">
+  <h2 class="soru-baslik">Akıl tek başına hakikate ulaşabilir mi?</h2>
+  <p class="kisa-aciklama">Aklın sınırları ve yeterliliği konusu ele alınır.</p>
+</li>
+
+<li data-konu="Özgür İrade" data-ekol="Kelâm">
+  <h2 class="soru-baslik">İslam düşüncesinde özgür irade nasıl temellendirilmiştir?</h2>
+  <p class="kisa-aciklama">İnsan fiillerinin sorumluluğu ve ilahi irade ilişkisi tartışılır.</p>
+</li>
+
+<li data-konu="Kader Problemi" data-ekol="Kelâm">
+  <h2 class="soru-baslik">Kader anlayışı insan sorumluluğunu ortadan kaldırır mı?</h2>
+  <p class="kisa-aciklama">Kader ile ahlaki sorumluluk arasındaki denge ele alınır.</p>
+</li>
+
+<li data-konu="Psikoloji / Nefs" data-ekol="İbn Sina">
+  <h2 class="soru-baslik">Nefs kavramı İslam felsefesinde nasıl tanımlanır?</h2>
+  <p class="kisa-aciklama">İnsanın ruhsal yapısı ve yetileri incelenir.</p>
+</li>
+
+<li data-konu="Ruh-Beden İlişkisi" data-ekol="İbn Sina">
+  <h2 class="soru-baslik">İbn Sina’ya göre ruh beden ilişkisi nasıldır?</h2>
+  <p class="kisa-aciklama">Ruhun bedenden bağımsızlığı ve sürekliliği tartışılır.</p>
+</li>
+
+<li data-konu="Ahlak Felsefesi" data-ekol="Meşşâîlik">
+  <h2 class="soru-baslik">İslam filozoflarına göre mutluluk (saadet) nedir?</h2>
+  <p class="kisa-aciklama">En yüksek iyi ve insanın nihai amacı ele alınır.</p>
+</li>
+
+<li data-konu="Ahlak Felsefesi" data-ekol="Genel">
+  <h2 class="soru-baslik">Ahlakın kaynağı akıl mı vahiy midir?</h2>
+  <p class="kisa-aciklama">Ahlaki ilkelerin temeli tartışılır.</p>
+</li>
+
+<li data-konu="Ahlak Felsefesi" data-ekol="Genel">
+  <h2 class="soru-baslik">İslam felsefesinde iyi ve kötü nasıl belirlenir?</h2>
+  <p class="kisa-aciklama">Değer yargılarının objektifliği sorgulanır.</p>
+</li>
+
+<li data-konu="Ontoloji" data-ekol="Meşşâîlik">
+  <h2 class="soru-baslik">Varlık hiyerarşisi anlayışı ne anlama gelir?</h2>
+  <p class="kisa-aciklama">Varlıkların dereceli yapısı ele alınır.</p>
+</li>
+
+<li data-konu="Kozmoloji" data-ekol="Sudur Teorisi">
+  <h2 class="soru-baslik">Sudur teorisi evrenin yaratılışını nasıl açıklar?</h2>
+  <p class="kisa-aciklama">Evrenin ilahi akıldan aşamalı olarak meydana gelişi anlatılır.</p>
+</li>
+
+<li data-konu="Kozmoloji" data-ekol="Genel">
+  <h2 class="soru-baslik">İslam filozoflarına göre evren ezeli midir, yaratılmış mıdır?</h2>
+  <p class="kisa-aciklama">Evrenin başlangıcına dair felsefi yaklaşımlar ele alınır.</p>
+</li>
+
+<li data-konu="Bilgi-İman İlişkisi" data-ekol="Genel">
+  <h2 class="soru-baslik">Bilgi ile iman arasında nasıl bir ilişki vardır?</h2>
+  <p class="kisa-aciklama">Akli bilgi ile dini inanç arasındaki bağ tartışılır.</p>
+</li>
+
+<li data-konu="Hikmet Kavramı" data-ekol="Genel">
+  <h2 class="soru-baslik">İslam felsefesinde hikmet kavramı neyi ifade eder?</h2>
+  <p class="kisa-aciklama">Bilgelik, doğru bilgi ve doğru eylem birlikteliği olarak ele alınır.</p>
+</li>
+
+</ul>
