Add book list with details in kitaplar.html
Added a list of books with titles, authors, and descriptions.

--- a/kitaplar.html
+++ b/kitaplar.html
@@ -1,4 +1,27 @@
-<li>MÖ 1.000.000 civarı – Ateşin kontrollü kullanımı, insanlığın doğaya karşı ilk büyük teknolojik üstünlüğünü sağladı.</li>
-  <li>MÖ 10.000 – Tarımın başlaması, yerleşik hayatın ve uygarlığın temelini attı.</li>
-  <li>MÖ 3.500 – Tekerleğin icadı, ulaşım ve ticarette devrim yarattı.</li>
-  <li>MÖ 3.200 – Yazının icadı, bilginin kalıcı hale gelmesini sağladı.</li>
+<ul id="kitap-listesi">
+  <li>
+    <h2 class="kitap-adi">Suç ve Ceza</h2>
+    <h3 class="yazar">Fyodor Dostoyevski</h3>
+    <p class="konu">
+      Ahlak, vicdan ve suç kavramlarını bireyin iç dünyası üzerinden ele alan psikolojik bir roman.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="kitap-adi">Körlük</h2>
+    <h3 class="yazar">José Saramago</h3>
+    <p class="konu">
+      Toplumsal çöküşü ve insan doğasını alegorik bir salgın üzerinden anlatan modern roman.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="kitap-adi">İhya-u Ulumiddin</h2>
+    <h3 class="yazar">İmam Gazali</h3>
+    <p class="konu">
+      İslam ahlakı, ibadet ve insanın iç terbiyesini ele alan klasik eser.
+    </p>
+  </li>
+</ul>
+
+<div id="rastgele-kitap"></div>
