Add future predictions for technology and society
Added future predictions related to technology and society.

--- a/gelecek.html
+++ b/gelecek.html
@@ -1,4 +1,116 @@
-<li>MÖ 1.000.000 civarı – Ateşin kontrollü kullanımı, insanlığın doğaya karşı ilk büyük teknolojik üstünlüğünü sağladı.</li>
-  <li>MÖ 10.000 – Tarımın başlaması, yerleşik hayatın ve uygarlığın temelini attı.</li>
-  <li>MÖ 3.500 – Tekerleğin icadı, ulaşım ve ticarette devrim yarattı.</li>
-  <li>MÖ 3.200 – Yazının icadı, bilginin kalıcı hale gelmesini sağladı.</li>
+<ul id="gelecek-tahminleri">
+  <li>
+    <h2 class="yil">2030–2035</h2>
+    <p class="baslik">Yapay Zeka Destekli Sağlık Sistemleri</p>
+
+    <p class="aciklama">
+      Yapay zeka, teşhis ve tedavi planlamasında insan doktorlardan daha tutarlı ve hızlı sonuçlar üretmeye başlayacak.
+    </p>
+
+    <p class="neden teknolojik">
+      Derin öğrenme modellerinin tıbbi görüntüleme ve genetik veri üzerinde olgunlaşması.
+    </p>
+    <p class="neden toplumsal">
+      Yaşlanan nüfus ve sağlık personeli yetersizliği.
+    </p>
+    <p class="neden siyasal">
+      Devletlerin sağlık maliyetlerini düşürme baskısı.
+    </p>
+
+    <p class="sonuc">
+      Sağlık hizmetleri erişilebilir hale gelirken insan-doktor ilişkisi yeniden tanımlanacak.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="yil">2040–2050</h2>
+    <p class="baslik">Beyin–Makine Entegrasyonu</p>
+
+    <p class="aciklama">
+      İnsan beyni ile dijital sistemler arasında doğrudan ve kalıcı bağlantılar kurulacak.
+    </p>
+
+    <p class="neden teknolojik">
+      Nörobilim, sensör teknolojileri ve yapay sinir ağlarındaki ilerlemeler.
+    </p>
+    <p class="neden toplumsal">
+      Engellilik kavramının aşılması ve insan kapasitesini artırma isteği.
+    </p>
+    <p class="neden siyasal">
+      Askerî ve stratejik üstünlük arayışı.
+    </p>
+
+    <p class="sonuc">
+      İnsan ile makine arasındaki sınır bulanıklaşacak.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="yil">2050–2060</h2>
+    <p class="baslik">Mars ve Uzay Yerleşimleri</p>
+
+    <p class="aciklama">
+      Uzayda kalıcı insan varlığı bilimsel olmaktan çıkıp siyasi ve ekonomik bir projeye dönüşecek.
+    </p>
+
+    <p class="neden teknolojik">
+      Yeniden kullanılabilir roketler ve yaşam destek sistemleri.
+    </p>
+    <p class="neden toplumsal">
+      Dünya kaynaklarının sınırlanması ve nüfus baskısı.
+    </p>
+    <p class="neden siyasal">
+      Uzayda egemenlik ve prestij rekabeti.
+    </p>
+
+    <p class="sonuc">
+      İnsanlık ilk kez gezegenler arası bir tür haline yaklaşacak.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="yil">2060–2070</h2>
+    <p class="baslik">Kuantum ve Yapay Zeka Birleşimi</p>
+
+    <p class="aciklama">
+      Kuantum bilgisayarlar, yapay zekanın çözmekte zorlandığı problemleri saniyeler içinde çözebilecek.
+    </p>
+
+    <p class="neden teknolojik">
+      Kuantum hata düzeltme ve ölçeklenebilir mimarilerin gelişmesi.
+    </p>
+    <p class="neden toplumsal">
+      İklim, enerji ve salgın gibi karmaşık sorunlara çözüm ihtiyacı.
+    </p>
+    <p class="neden siyasal">
+      Veri üstünlüğünün küresel güç dengelerini belirlemesi.
+    </p>
+
+    <p class="sonuc">
+      Bilgi gücü, askeri güçten daha belirleyici hale gelecek.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="yil">2070–2080</h2>
+    <p class="baslik">Biyonik İnsan Çağı</p>
+
+    <p class="aciklama">
+      Yapay organlar ve biyoteknolojik güçlendirmeler yaygınlaşacak.
+    </p>
+
+    <p class="neden teknolojik">
+      Biyomalzeme ve yapay doku mühendisliği.
+    </p>
+    <p class="neden toplumsal">
+      Daha uzun ve sağlıklı yaşam talebi.
+    </p>
+    <p class="neden siyasal">
+      Sağlık teknolojilerinin stratejik sektör haline gelmesi.
+    </p>
+
+    <p class="sonuc">
+      “İnsan nedir?” sorusu yeniden ve ciddi biçimde tartışılacak.
+    </p>
+  </li>
+</ul>
