--- a/filmler.html
+++ b/filmler.html
@@ -1,4 +1,30 @@
-<li>MÖ 1.000.000 civarı – Ateşin kontrollü kullanımı, insanlığın doğaya karşı ilk büyük teknolojik üstünlüğünü sağladı.</li>
-  <li>MÖ 10.000 – Tarımın başlaması, yerleşik hayatın ve uygarlığın temelini attı.</li>
-  <li>MÖ 3.500 – Tekerleğin icadı, ulaşım ve ticarette devrim yarattı.</li>
-  <li>MÖ 3.200 – Yazının icadı, bilginin kalıcı hale gelmesini sağladı.</li>
+<ul id="film-listesi">
+  <li>
+    <h2 class="film-adi">Stalker</h2>
+    <h3 class="yonetmen">Andrey Tarkovski</h3>
+    <span class="yil">1979</span>
+    <p class="konu">
+      İnanç, anlam arayışı ve insanın iç boşluğunu metafizik bir yolculuk üzerinden anlatan kült film.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="film-adi">Children of Men</h2>
+    <h3 class="yonetmen">Alfonso Cuarón</h3>
+    <span class="yil">2006</span>
+    <p class="konu">
+      Umudunu kaybetmiş bir dünyada insanlığın geleceğini sorgulayan distopik bilim kurgu.
+    </p>
+  </li>
+
+  <li>
+    <h2 class="film-adi">The Message (Çağrı)</h2>
+    <h3 class="yonetmen">Mustafa Akkad</h3>
+    <span class="yil">1976</span>
+    <p class="konu">
+      İslam’ın doğuşunu tarihsel ve saygılı bir anlatımla ele alan klasik yapım.
+    </p>
+  </li>
+</ul>
+
+<div id="rastgele-film"></div>
